force-app/main/default/objects/Sales_Organization_User__c/Sales_Organization_User__c.object-meta.xml
<CustomObject>
    <label>Sales Organization User</label>
    <nameField>
        <label>Sales Organization User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Organization Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>