force-app/main/default/objects/Sales_Organization_User__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <formula>Sales_Organizationa__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code</label>
    <type>Text</type>
</CustomField>