force-app/main/default/objects/Sales_Organization_User__c/fields/Sales_Organizationa__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organizationa__c</fullName>
    <label>Sales Organization</label>
    <referenceTo>Sales_Organization__c</referenceTo>
    <relationshipLabel>Sales Organization Users (Sales Organizationa)</relationshipLabel>
    <relationshipName>Sales_Organization_Users1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>