force-app/main/default/objects/Sales_Organization_User__c/fields/Unique_SalesOrg_User_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_SalesOrg_User_Key__c</fullName>
    <label>Unique SalesOrg User Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>