force-app/main/default/objects/Sales_Organization_User__c/listViews/All_Sales_Organization_User.listView-meta.xml
<ListView>
    <fullName>All_Sales_Organization_User</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Sales Organization User</label>
</ListView>